2004-08-03  Hagen Moebius  <hagen.moebius@starschiffchen.de>

	* docs/.cvsignore: Added to ignore doxygen html and latex output.
	* .cvsignore: Added a few files from the gnu autotools process.

2004-08-03  James Turner  <james@worldforge.org>

	* Rename Player to Account.
	
	* Eris/Account.cpp: fix loginError to put status back to DISCONNECTED.
	  This means it should be possible to try another login after an error,
	  instead of having the state get wedged.

2004-08-01  James Turner  <james@worldforge.org>

	* Remove lots of debug output all over the place
	
	* Eris/Lobby.cpp, Eris/Room.cpp: get OOG imaginary ops (emotes)
	  working.

	* Eris/Player.cpp: made the error output when calling login() in
	  a bad state more useful.

	* Eris/Player.cpp: stop reporting unhandled sight(foo) as defunct
	  character look, and just ignore it.

	* Eris/Entity.cpp: add untested support for actions and imaginary
	  ops from entities.

2004-08-01  James Turner  <james@worldforge.org>

	* Eris/Room.cpp, Eris/Room.h, Eris/Lobby.cpp, Eris/Lobby.h: change
	  how OOG chat is handled, so in-room chats do the right thing.

2004-08-01  James Turner  <james@worldforge.org>

	* Eris/Entity.h, Eris/Entity.cpp: implement getViewPosition, and add
	  getViewOrientation.
	 
	* Eris/Entity.h: rename to/fromParentCoords to to/fromLocationCoords
	
	* Eris/Connection.cpp: make disconnect() check for and handle being
	  in the DISCONNECTED or DISCONNECTING states already

2004-08-01  James Turner  <james@worldforge.org>

	* Eris/Player.cpp: change logic in ::netConnected, so cresting and logging-in
	  a player inside Connection::Connected doesn't assert.
	  
	* Eris/Player.cpp: many chanegs to logout logic, should generally work now,
	  but still needs lots of testing, since there are many edge cases.

	* Eris/TypeInfo.cpp: handle custom types that inherit admin_entity, not
	  game_entity. This is true for the OOG chat structure
	  